# tfblocks

./: .gitignore  LICENSE  README.md  pyproject.toml  renovate.json5
.github/workflows/: release.yml
src/: aws_resources.py  main.py
src/tfblocks/: __init__.py  aws_resources.py  main.py
tests/: test_main.py
