[project]
name = "tfblocks"
version = "0.1.0"
description = "Generate Terraform import and removed blocks for AWS resources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
tfblocks = "tfblocks.main:main"

[tool.uv]
package = true

[tool.ruff.lint]
ignore = [
  # Conflicts with the formatter
  "COM812", "ISC001"
]

[tool.pyright]
include = ["src", "tests"]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "uv>=0.5.21",
]
