[project]
name = "tfblocks"
version = "0.0.0-dev"
description = "Easily generate Terraform import and removed blocks for resources in your state"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
tfblocks = "tfblocks.main:main"

[tool.uv]
package = true

[tool.ruff.lint]
ignore = [
  # Conflicts with the formatter
  "COM812", "ISC001"
]

[tool.pyright]
include = ["src", "tests"]

[dependency-groups]
dev = [
    "python-semantic-release>=9.21.0",
    "ruff>=0.9.2",
    "uv>=0.5.21",
]

[tool.semantic_release]
major_on_zero = false
allow_zero_version = true
upload_to_pypi = false
upload_to_release = true
commit_parser = "angular"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = []
patch_tags = ["feat", "fix", "refactor", "perf", "revert"]
